--- a/templates/hello.html
+++ b/templates/hello.html
@@ -32,7 +32,7 @@
 <h2 class="col-md-12">Fast Food Twitter Sentiment</h2>
 <p class="col-md-12">The chart below displays the sentiment index of a given fast food restaurant
 over the past 24 hours.  This index is calculated as the ratio of positive tweets
-to total number of tweets from the previous hour.  Selecting any data point on the chart will display aselection of positive and negative tweets from the 10 minutes prior to the selected value in addition to the total number of negative and positive tweets from that time period.</p>
+to total number of tweets from the previous hour.  Selecting any data point on the chart will display aselection of positive and negative tweets from the 10 minutes prior to the selected value in addition to the total number of negative and positive tweets from that same 10 minute window.</p>
 </script>
 <div class="col-md-12">
 <div id="chart" style="padding-right:1cm;"></div>
@@ -51,6 +51,8 @@ var ch_times = {{ ch_times | tojson | safe }}
 var ch_avgs = {{ ch_avgs | tojson | safe }}
 var ta_times = {{ ta_times | tojson | safe }}
 var ta_avgs = {{ ta_avgs | tojson | safe }}
+var ph_times = {{ ph_times | tojson | safe }}
+var ph_avgs = {{ ph_avgs | tojson | safe }}
 var kfc_times = {{ kfc_times | tojson | safe }}
 var kfc_avgs = {{ kfc_avgs | tojson | safe }}
 
@@ -68,6 +70,7 @@ var chart = c3.generate({
 	    "McDonald's": 'mc_times',
 	    "Starbucks": 'st_times',
 	    "Chipotle": 'ch_times',
+	    "Pizza Hut": 'ph_times',
 	    "Taco Bell": 'ta_times',
 	    "KFC": 'kfc_times',
             },
@@ -78,12 +81,14 @@ var chart = c3.generate({
 		['Starbucks'].concat(st_avgs),
 		['ch_times'].concat(ch_times),
 		['Chipotle'].concat(ch_avgs),
+		['ph_times'].concat(ph_times),
+		['Pizza Hut'].concat(ph_avgs),
 		['ta_times'].concat(ta_times),
 		['Taco Bell'].concat(ta_avgs),
 		['kfc_times'].concat(kfc_times),
 		['KFC'].concat(kfc_avgs)
         ],
-	hide: ['Chipotle', 'Taco Bell', 'KFC'],
+	hide: ['Chipotle', 'Pizza Hut', 'Taco Bell', 'KFC'],
 	selection: {
 	    enabled: true,
 	    multiple: false
@@ -120,6 +125,7 @@ var chart = c3.generate({
 	   "McDonald's": '#FF4747',
 	   "Starbucks": '#005C00',
 	   "Chipotle": '#993333',
+	   "Pizza Hut": '#FF9900',
 	   "Taco Bell": '#005CE6',
 	   "KFC": '#E68A00'
 	}
